@@ -1,0 +1,13 @@
+.. _config_linux_cpu_stats_decoder:
+
+Linux CPU Stats Decoder
+=======================
+
+.. versionadded:: 0.10
+
+| Plugin Name: **SandboxDecoder**
+| File Name: **lua_decoders/linux_procstat.lua**
+
+.. include:: /../../sandbox/lua/decoders/linux_procstat.lua
+   :start-after: --[[
+   :end-before: --]]
