@@ -1,0 +1,13 @@
+.. _config_cpu_stats_filter:
+
+CPU Stats Filter
+================
+
+.. versionadded:: 0.10
+
+| Plugin Name: **SandboxFilter**
+| File Name: **lua_filters/procstat.lua**
+
+.. include:: /../../sandbox/lua/filters/procstat.lua
+   :start-after: --[[
+   :end-before: --]]
